[gd_scene load_steps=7 format=3 uid="uid://dk3ft8y6whige"]

[ext_resource type="Script" path="res://script/world.gd" id="1_2nlq2"]
[ext_resource type="PackedScene" uid="uid://dbgjehwt4f40o" path="res://scene/map.tscn" id="1_ikiro"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_64bdy"]
sky_top_color = Color(1, 0.278431, 0.835294, 1)
sky_horizon_color = Color(0.133333, 0.933333, 1, 1)
ground_bottom_color = Color(0.133333, 0.933333, 1, 1)
ground_horizon_color = Color(0.133333, 0.933333, 1, 1)
ground_curve = 0.0672721
sun_angle_max = 51.0
sun_curve = 0.0923358

[sub_resource type="Sky" id="Sky_2rxn0"]
sky_material = SubResource("ProceduralSkyMaterial_64bdy")

[sub_resource type="Environment" id="Environment_m367h"]
background_mode = 2
sky = SubResource("Sky_2rxn0")
tonemap_mode = 2
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.694118, 0.00392157, 0.941176, 1)
fog_light_energy = 0.12

[sub_resource type="LabelSettings" id="LabelSettings_1x1v5"]
font_size = 33
font_color = Color(0.133333, 0.933333, 1, 1)

[node name="world" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0741196, -1.90735e-06, 0.0148811)
script = ExtResource("1_2nlq2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
light_color = Color(0, 0, 0, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m367h")

[node name="map" parent="." instance=ExtResource("1_ikiro")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 3.16321, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 626.0
offset_top = 330.0
offset_right = -626.0
offset_bottom = -330.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Jam 2023
"
label_settings = SubResource("LabelSettings_1x1v5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.929412, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 0.278431, 0.835294, 1)
placeholder_text = "Enter IP Address"
alignment = 1

[node name="PortEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.933333, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 0.278431, 0.835294, 1)
placeholder_text = "Enter Port"
alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.933333, 1, 1)
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.933333, 1, 1)
text = "Join"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://scene/player.tscn", "res://scene/player2.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
